care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/Quarterly_Reporting__c.object-meta.xml
<CustomObject>
    <label>Quarterly Reporting</label>
    <nameField>
        <displayFormat>QR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Reportings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>