care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Active_Loans_Reported__c.field-meta.xml
<CustomField>
    <fullName>Active_Loans_Reported__c</fullName>
    <description>Full Name of this field is Number of active loans reported - disagg by gender and disability,
Please indicate currently outstanding loans (not clients)</description>
    <label>Active Loans Reported(gender and disabi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>