care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Administrative_Expenses_year_to_date__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Expenses_year_to_date__c</fullName>
    <description>Non-financial expenses directly related to the provision of financial services</description>
    <label>Administrative Expenses (year to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>