care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Average_Effective_Interest_Rate_EIR__c.field-meta.xml
<CustomField>
    <fullName>Average_Effective_Interest_Rate_EIR__c</fullName>
    <description>full name of this field is,
Average annual interest rate on gross loan portfolio including all loans, i.e. Lendwithcare and non-Lendwithcare, calculated by incorporating the effects of compounding, insurance, fees, and cash collateral.</description>
    <label>Average Effective Interest Rate (EIR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>