care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Average_Effective_LWC_Interest_Rate_EIR__c.field-meta.xml
<CustomField>
    <fullName>Average_Effective_LWC_Interest_Rate_EIR__c</fullName>
    <description>Full Name of this field is Average Effective Interest Rate (EIR) charged on Lendwithcare loans (only)
Average annual interest rate on gross loan portfolio disbursed through the Lendwithcare program (only), calculated by incorporating the effects of compounding, insurance, fees, and cash collateral.</description>
    <label>Average Effective LWC Interest Rate(EIR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>