care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Average_Gross_Loan_Size_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Average_Gross_Loan_Size_Local_Currency__c</fullName>
    <description>Gross Loan Portfolio / Number of Active Borrowers</description>
    <label>Average Gross Loan Size (local currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>