care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Borrowers_25_or_Under__c.field-meta.xml
<CustomField>
    <fullName>Borrowers_25_or_Under__c</fullName>
    <description>Percentage of borrowers aged 25 years or less over total borrowers</description>
    <label>% Borrowers 25 or Under</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>