care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Borrowers_Female__c.field-meta.xml
<CustomField>
    <fullName>Borrowers_Female__c</fullName>
    <description>Percentage of female borrowers over total borrowers</description>
    <label>% Borrowers Female</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>