care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Borrowers_Rural__c.field-meta.xml
<CustomField>
    <fullName>Borrowers_Rural__c</fullName>
    <description>Percentage of rural borrowers over total borrowers</description>
    <label>% Borrowers Rural</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>