care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Complaints_Female_Clients_yr_to_date__c.field-meta.xml
<CustomField>
    <fullName>Complaints_Female_Clients_yr_to_date__c</fullName>
    <description>Percentage of complaints from female clients only</description>
    <label>Complaints Female Clients (yr to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>