care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Deposits_from_Clients_and_Public__c.field-meta.xml
<CustomField>
    <fullName>Deposits_from_Clients_and_Public__c</fullName>
    <description>Funds placed with the FSP that are payable on demand to a depositor, including savings accounts and time deposits</description>
    <label>Deposits from Clients and Public</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>