care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Donated_Income_year_to_date__c.field-meta.xml
<CustomField>
    <fullName>Donated_Income_year_to_date__c</fullName>
    <description>Donations in the form of revenue grants</description>
    <label>Donated Income (year to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>