care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Equity_as_of_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Equity_as_of_Reporting_Period__c</fullName>
    <description>Share capital + premium+ retained earnings + reserves</description>
    <label>Equity as of Reporting Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>