care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Equity_at_the_End_of_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>Equity_at_the_End_of_Previous_Year__c</fullName>
    <description>Share capital + premium+ retained earnings + reserves</description>
    <label>Equity at the End of Previous Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>