care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Financial_Expenses_year_to_date__c.field-meta.xml
<CustomField>
    <fullName>Financial_Expenses_year_to_date__c</fullName>
    <description>Interest and commisions on all liabilities, including deposits held by clients, and borrowing</description>
    <label>Financial Expenses (year to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>