care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Gross_Loan_Portfolio_as_of_reporting_per__c.field-meta.xml
<CustomField>
    <fullName>Gross_Loan_Portfolio_as_of_reporting_per__c</fullName>
    <description>full name of this field is Gross Loan Portfolio as of reporting period,
Outstanding principal balance of all of an FSP’s outstanding loans</description>
    <label>Gross Loan Portfolio of Reporting Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>