care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Gross_Loan_Portfolio_at_the_end_of_previ__c.field-meta.xml
<CustomField>
    <fullName>Gross_Loan_Portfolio_at_the_end_of_previ__c</fullName>
    <description>full name of this field is Gross Loan Portfolio at the end of previous year ,
Outstanding principal balance of all of an FSP’s outstanding loans</description>
    <label>Gross Loan Portfolio After Previous Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>