care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Gross_Value_of_Total_Loans_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Gross_Value_of_Total_Loans_Written_Off__c</fullName>
    <description>Loans recognized for accounting purposes as uncollectible</description>
    <label>Gross Value of Total Loans Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>