care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Individual_Clients_per_Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Individual_Clients_per_Loan_Officer__c</fullName>
    <description>Please indicate individual clients per loan officer (not groups)</description>
    <label>Individual Clients per Loan Officer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>