care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Loan_Loss_Allowance_BALANCE_SHEET__c.field-meta.xml
<CustomField>
    <fullName>Loan_Loss_Allowance_BALANCE_SHEET__c</fullName>
    <description>Portion of portfolio that has been provisioned in anticipation of losses deu to default.</description>
    <label>Loan-Loss Allowance (BALANCE SHEET)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>