care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Loan_Loss_Provision_Expenses_Year_to_Da__c.field-meta.xml
<CustomField>
    <fullName>Loan_Loss_Provision_Expenses_Year_to_Da__c</fullName>
    <description>Non cash expense used to increase the loan-loss allowance</description>
    <label>Loan Loss Provision Expenses (year to da</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>