care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Net_Profit_After_Tax_year_to_date__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_After_Tax_year_to_date__c</fullName>
    <description>Bottom line of the Income Statement</description>
    <label>Net Profit After Tax (year to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>