care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Number_of_Active_Loans_Reported__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Loans_Reported__c</fullName>
    <description>Please indicate currently outstanding loans (not clients)</description>
    <label>Number of Active Loans Reported</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>