care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Of_Overdue_Debt_1month__c.field-meta.xml
<CustomField>
    <fullName>Of_Overdue_Debt_1month__c</fullName>
    <description>Loans from borrowers in arrears</description>
    <label>% Of Overdue Debt &lt; 1month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>