care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Of_Portfolio_Restructured_Re_Financed__c.field-meta.xml
<CustomField>
    <fullName>Of_Portfolio_Restructured_Re_Financed__c</fullName>
    <description>Balance of all outstanding loans that have been renegotiated or modified to extend or postpone originally scheduled installments</description>
    <label>% Of Portfolio Restructured/Re-financed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>