care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Other_Financial_Covenants__c.field-meta.xml
<CustomField>
    <fullName>Other_Financial_Covenants__c</fullName>
    <description>Three descriptions are given in micro finance excel sheet. 
Operational Self Sufficiency ratio (Operating revenue /Financial expense + Loan-loss provision expense + Operating expense) of greater than 90% as per the last financial statements.
Risk Coverage Ratio must be more than 75% at all times (Risk Coverage Ratio is defined as Impairment Loss Allowance/PAR 30 + Restructured loan portfolio).
Capital Adequacy ratio (Total Regulatory Capital/Total Assets) at no less than 10%.</description>
    <label>Other Financial Covenants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>