care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Overdue_1_Month_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Overdue_1_Month_3_Months__c</fullName>
    <description>Loans from borrowers in arrears</description>
    <label>% Overdue 1 Month - 3 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>