care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Overdue_3_Months_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Overdue_3_Months_6_Months__c</fullName>
    <description>Loans from borrowers in arrears</description>
    <label>% Overdue 3 Months - 6 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>