care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Overdue_6_Months_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Overdue_6_Months_12_Months__c</fullName>
    <description>Loans from borrowers in arrears</description>
    <label>% Overdue 6 Months - 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>