care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/PAR_30__c.field-meta.xml
<CustomField>
    <fullName>PAR_30__c</fullName>
    <description>Balance of all outstanding loans that have one or more installments of principal past due by 30 days</description>
    <label>% PAR 30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>