care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Personnel_Expenses_year_to_date__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Expenses_year_to_date__c</fullName>
    <description>Staff related expenses, such as salaries and other benefits</description>
    <label>Personnel Expenses (year to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>