care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <description>Agriculture, mining, raw materials, forrestry, and fishing</description>
    <label>% Primary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>