care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Reporting_Period_End_date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_End_date__c</fullName>
    <label>Reporting Period - End date</label>
    <type>Date</type>
</CustomField>