care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Reporting_Period_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Start_date__c</fullName>
    <label>Reporting Period - Start date</label>
    <type>Date</type>
</CustomField>