care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Revenue_from_Loan_Portfolio_year_to_dat__c.field-meta.xml
<CustomField>
    <fullName>Revenue_from_Loan_Portfolio_year_to_dat__c</fullName>
    <description>Revenue from interest earned, commissions and fees on the gross loan portfolio only.</description>
    <label>Revenue from Loan Portfolio (year to dat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>