care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Revenue_Generated_All_Investments__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Generated_All_Investments__c</fullName>
    <description>full name of field is Revenue generated from all other investments and deposits
Revenue from interest, dividends, or other payments generated by financial assets other than the gross loan portfolio, such as deposits</description>
    <label>Revenue Generated(All Investments)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>