care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <description>Manufacturing, utilities, and construction</description>
    <label>% Secondary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>