care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Tertiary__c.field-meta.xml
<CustomField>
    <fullName>Tertiary__c</fullName>
    <description>Retail and service sector</description>
    <label>% Tertiary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>