care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Total_Assets_as_of_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets_as_of_Reporting_Period__c</fullName>
    <description>All assets accounts</description>
    <label>Total Assets as of Reporting Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>