care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Total_Assets_at_the_End_of_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets_at_the_End_of_Previous_Year__c</fullName>
    <description>All assets accounts</description>
    <label>Total Assets at the End of Previous Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>