care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Total_Expenses_year_to_date__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_year_to_date__c</fullName>
    <description>Sum of Total Expenses</description>
    <label>Total Expenses (year to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>