care-australia-uat/force-app/main/default/objects/Quarterly_Reporting__c/fields/Total_Revenue_year_to_date__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_year_to_date__c</fullName>
    <description>Total Revenue, including loan portfolio revenue, investment revenue, and other operating revenue</description>
    <label>Total Revenue (year to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>